--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,59 @@ img{
     font-size: larger;
 }
 .tdiv{
-    background-color: white;
     width: 600px;
     height: 1000px;
     position: relative;
     bottom: 1000px;
     left: 250px;
+}
+.topline{
+    border: none;
+    border-radius: 5px;
+    width: 585px;
+    height: 7px;
+    box-shadow: 0 0 9px 6px rgba(15, 15, 15, 0.664);
+    background-color: rgba(15, 15, 15, 0.664);
+}
+.about{
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    width: 563px;
+    position: relative;
+    left: 18px;
+}
+.age{
+    font-style: italic;
+    color: seagreen;
+    width: 563px;
+    position: relative;
+    left: 18px;
+
+}
+span{
+    color: gray;
+}
+.description{
+    color: gray;
+    width: 563px;
+    position: relative;
+    left: 18px;
+}
+.centerline{
+    border: none;
+    width: 530px;
+    position: relative;
+    left: 2px;
+    box-shadow: 0 0 0px 2px rgba(128, 128, 128, 0.103);
+    background-color: rgba(128, 128, 128, 0.103);
+    
+}
+.myservices{
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    width: 563px;
+    position: relative;
+    left: 18px;
 }
