--- a/styles/style.css
+++ b/styles/style.css
@@ -7,19 +7,19 @@ body{
 .container{
     background-color: rgb(32, 32, 32);
     width: 1100px;
-    height: 1000px;
+    height: 700px;
     margin-top: 100px;
     margin-bottom: 100px;
 }
 .myimg{
-    height: 1000px;
+    height: 700px;
     width: 500px;
     position: relative;
     right: 300px;
 }
 img{
     width: 500px;
-    height: 1100px;
+    height: 800px;
     position: relative;
     bottom: 50px;
 }
@@ -39,9 +39,9 @@ img{
 }
 .tdiv{
     width: 600px;
-    height: 1000px;
+    height: 700px;
     position: relative;
-    bottom: 1000px;
+    bottom: 700px;
     left: 250px;
 }
 .topline{
@@ -93,4 +93,34 @@ span{
     width: 563px;
     position: relative;
     left: 18px;
+}
+.dev{
+    width: 250px;
+    height: 300px;
+    position: relative;
+    right: 140px;
+}
+.dev2{
+    width: 250px;
+    height: 300px;
+    position: relative;
+    left: 145px;
+    bottom: 300px;
+}
+.development{
+    color: white;
+    font-weight: bold;
+    font-size: large;
+}
+.span{
+    color: gray;
+}
+.bottomline{
+    border: none;
+    width: 530px;
+    position: relative;
+    right: 283px;
+    box-shadow: 0 0 0px 2px rgba(128, 128, 128, 0.103);
+    background-color: rgba(128, 128, 128, 0.103);
+    
 }
